docs/api/qiskit/0.24/qiskit.pulse.MemorySlot.mdx
---
title: MemorySlot
description: API reference for qiskit.pulse.MemorySlot
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.pulse.MemorySlot
---

<span id="qiskit-pulse-memoryslot" />

# qiskit.pulse.MemorySlot

<Class id="qiskit.pulse.MemorySlot" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.16/qiskit/pulse/channels.py" signature="MemorySlot(index)" modifiers="class">
  Memory slot channels represent classical memory storage.

  Channel class.

  **Parameters**

  **index** (`int`) – Index of channel.

  **Raises**

  [**PulseError**](qiskit.pulse.PulseError "qiskit.pulse.PulseError") – If `index` is not a nonnegative integer.

  ### \_\_init\_\_

  <Function id="qiskit.pulse.MemorySlot.__init__" signature="__init__(index)">
    Channel class.

    **Parameters**

    **index** (`int`) – Index of channel.

    **Raises**

    [**PulseError**](qiskit.pulse.PulseError "qiskit.pulse.PulseError") – If `index` is not a nonnegative integer.
  </Function>

  ## Methods

  |                                                                                           |                |
  | ----------------------------------------------------------------------------------------- | -------------- |
  | [`__init__`](#qiskit.pulse.MemorySlot.__init__ "qiskit.pulse.MemorySlot.__init__")(index) | Channel class. |

  ## Attributes

  |                                                                           |                                                                                    |
  | ------------------------------------------------------------------------- | ---------------------------------------------------------------------------------- |
  | [`index`](#qiskit.pulse.MemorySlot.index "qiskit.pulse.MemorySlot.index") | Return the index of this channel.                                                  |
  | [`name`](#qiskit.pulse.MemorySlot.name "qiskit.pulse.MemorySlot.name")    | Return the shorthand alias for this channel, which is based on its type and index. |
  | `prefix`                                                                  |                                                                                    |

  ## Members list

  ### index

  <Attribute id="qiskit.pulse.MemorySlot.index">
    Return the index of this channel. The index is a label for a control signal line typically mapped trivially to a qubit index. For instance, `DriveChannel(0)` labels the signal line driving the qubit labeled with index 0.

    **Return type**

    `int`
  </Attribute>

  ### name

  <Attribute id="qiskit.pulse.MemorySlot.name">
    Return the shorthand alias for this channel, which is based on its type and index.

    **Return type**

    `str`
  </Attribute>
</Class>

